--- a/tutorial.html
+++ b/tutorial.html
@@ -39,6 +39,11 @@
       <p><code>/download</code></p>
       <p>download the file, that was saved on the server with <i>POST FILE</i></p>
     </li>
+    <li>
+      <h2>POST Clear</h2>
+      <p><code>/clear</code></p>
+      <p>post the deletion of all users</p>
+    </li>
   </ul>
 </body>
 </html>
